# StellariumPluginTemplate

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DynamicPluginTemplate.cpp  DynamicPluginTemplate.hpp
src/gui/: DynamicPluginTemplateWindow.hpp
